<resources>
    <string name="app_name">Momentanpol</string>

    <string name="title_activity_momentanpol_main">Momentanpol</string>
    <string name="title_activity_momentanpol_task">MomentanpolTask</string>

    <string name="header_description">Header Logos</string>
    <string name="framemarker">FrameMarker</string>
    <string name="imagetarget">ImageTarget</string>
    <string name="opencvmarker">OpenCVMarker</string>
    <string name="title_activity_open_cvtask">OpenCVTask</string>
    <string name="farben">Farberkennung</string>
</resources>
