<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".GatrobeMain">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="30pt"
        android:contentDescription="@string/header_description"
        android:src="@mipmap/luh_logo_rgb_0_80_155" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <Button
        android:id="@+id/buttonImageTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2pt"
        android:layout_marginTop="2pt"
        android:background="#00ffffff"
        android:text="@string/imagetarget"
        android:textSize="8pt"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#000000" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100pt"
        android:layout_marginTop="20pt"
        android:contentDescription="@string/footer_description"
        android:src="@mipmap/arbeitssaalgatrobe" />

</LinearLayout>
